# bafang-firmware

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile-local  Dockerfile-slim  README.md  compile-with-docker.sh
.github/workflows/: main.yml  pages.yml
App/: CMakeLists.txt  am_fix.c  am_fix.h  audio.c  audio.h  bitmaps.c  bitmaps.h  board.c  main.c  misc.c  misc.h  radio.c  radio.h  settings.c  settings.h  version.c  version.h
App/app/: action.c  aircopy.c  aircopy.h  app.c  beam.c  main.c  menu.c  menu.h  spectrum.c  uart.c
App/driver/: backlight.c  bk4819.c  eeprom_compat.c  py25q16.c  st7565.c  voice.c
App/helper/: battery.c  boot.c
App/ime/: ime.c  ime.h  pinyin_table.c  pinyin_table.h
App/l10n/: cjk_font.c  cjk_font.h  cjk_font_data.c  l10n.c  strings.h  strings_en.c  strings_zh.c
App/ui/: helper.c  helper.h  main.c  menu.c  menu.h  menu_sub_values_zh.c  menu_sub_values_zh.h  status.c  welcome.c
cmake/: check-size.cmake  gcc-arm-none-eabi.cmake
tools/: extract_pinyin.py  gen_cjk_font.py
tools/serialtool/: _prog.py  cli.py  debug_flash.py  flash_font.py  msg.py
tools/webflash/: index.html
